--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@ config.ini
 settings/Trach.ahk
 settings/bind.ahk
 settings/triggers.ahk
-admin.ahk
-bindings.example.json
-bindings.json
-commands.json
-icon_64.ico
-keys.json
-logo.png
-triggers.json
+code/admin.ahk
+code/bindings.example.json
+code/bindings.json
+code/commands.json
+code/icon_64.ico
+code/keys.json
+code/logo.png
+code/triggers.json
